Fixed navbar collapse issues with clicking off overlaying links

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -28,8 +28,9 @@
 }
 
 .collapse-off {
-  height: 100vh;
+  height: 75vh;
   width: 100vw;
+  top: 286px;
   background-color: transparent;
   visibility: visible;
 }
